--- a/src/components/footer/styles/footer.module.sass
+++ b/src/components/footer/styles/footer.module.sass
@@ -13,12 +13,7 @@
   line-height: 20px
   color: #fff
 
-.footer__inst 
-  width: 80px
-  height: 80px
-  background-color: transparent
-
-.footer__logo
+.footer__inst, .footer__logo
   width: 80px
   height: 80px
 
