fixed banners style

--- a/src/components/common/benefits/styles/benefits.module.sass
+++ b/src/components/common/benefits/styles/benefits.module.sass
@@ -4,6 +4,7 @@
   display: flex
   background: linear-gradient(102.39deg, #030303 0%, #240041 100%)
   .benefits__items
+    color: #fff
     display: flex
     justify-content: center
     align-items: center
