--- a/src/components/common/banner/styles/banner.module.sass
+++ b/src/components/common/banner/styles/banner.module.sass
@@ -1,5 +1,6 @@
 .banner
   background: linear-gradient(243.56deg, #520092 2.31%, #000000 56.63%)
+  position: relative
 
 .banner__container
   padding: 200px 20px 140px 20px
