fixed all components

--- a/src/components/common/benefits/styles/benefits.module.sass
+++ b/src/components/common/benefits/styles/benefits.module.sass
@@ -9,7 +9,7 @@
     justify-content: center
     align-items: center
     flex-wrap: wrap
-    margin: 0 auto
+    margin: 0 auto 
     .benefits__list
       display: flex
       flex-direction: row
@@ -17,12 +17,13 @@
       justify-content: center
       align-content: center
       flex-wrap: wrap
-      row-gap: 180px
-      column-gap: 50px
+      row-gap: 100px
+      column-gap: 70px
       li
         display: flex
-        column-gap: 55px
-        max-width: 406px
+        column-gap: 30px
+        max-width: 420px
+        width: 100%
         flex-direction: row
         align-items: flex-start
         div
@@ -38,3 +39,14 @@
             font-size: 22px
             line-height: 26px
             max-width: 296px
+
+.benefits__img_wrap
+  width: 600px
+  height: 900px
+  position: relative
+
+.benefits__img__overflow
+  width: 530px
+  height: 800px
+  overflow: hidden
+  
