--- a/src/components/common/card/styles/card.module.sass
+++ b/src/components/common/card/styles/card.module.sass
@@ -4,7 +4,7 @@
   background: linear-gradient(243.56deg, #520092 2.31%, #000000 56.63%)
 
 .card__container
-  padding: 240px 140px 140px 100px
+  padding: 150px 140px 140px 100px
 
 .card__content_container
   display: flex
@@ -40,6 +40,12 @@
   width: 30px
   height: 30px
   border: 1px solid #fff
+  cursor: pointer
+  transition: all 0.1s linear
+  &:hover
+    border: 2px solid #fff
+  &:active
+    border: 2px solid #fff
 
 .card__chars
   display: flex
