--- a/src/components/common/catalog/styles/catalog.module.sass
+++ b/src/components/common/catalog/styles/catalog.module.sass
@@ -31,9 +31,11 @@
     transition: all 0.3s linear
 
 .catalog__list
+  max-width: 1200px
   display: flex
   column-gap: 90px
-  row-gap: 120px
+  row-gap: 100px
   align-items: stretch
   justify-content: center
   flex-wrap: wrap
+  margin: 0 auto
