--- a/src/components/common/catalog/styles/catalogItem.module.sass
+++ b/src/components/common/catalog/styles/catalogItem.module.sass
@@ -1,30 +1,33 @@
 @import ../../../../../public/assets/styles/variables/fonts
 
 .catalog__item
-  max-width: 420px
+  max-width: 320px
   width: 100%
   display: flex
   flex-direction: column
 
 .catalog__item__wrap
   position: relative
-  width: 420px
-  height: 420px
-  margin-bottom: 30px
+  width: 320px
+  height: 320px
+  margin-bottom: 20px
   background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.05) 100%)
   border: 1px solid #FFFFFF
 
 .catalog__item__title
   font-family: $georgia
   font-weight: 700
-  font-size: 28px
+  font-size: 24px
   line-height: 32px
-  margin: 0 auto 35px auto
+  margin: 0 auto 25px auto
   text-align: center
 
 .catalog__item__price
   align-self: flex-end
-  margin: auto auto 35px auto
+  margin: auto auto 25px auto
+  font-weight: 700
+  font-size: 22px
+  line-height: 32px
 
 .catalog__btns_wrap
   display: flex
@@ -34,11 +37,11 @@
 
 
 .catalog__item__btn
-  min-width: 210px
+  min-width: 160px
   width: 100%
   font-weight: 500
-  font-size: 22px
-  line-height: 22px
+  font-size: 20px
+  line-height: 20px
   padding: 20px
   border: 1px solid #FFFFFF
   background-color: transparent
