--- a/src/components/common/delivery/styles/delivery.module.sass
+++ b/src/components/common/delivery/styles/delivery.module.sass
@@ -5,16 +5,16 @@
 
 .delivery__container
   color: #fff
-  padding: 120px 20px 140px 20px
+  padding: 100px 20px 140px 20px
 
 .delivery__title
-  font-weight: 700
+  font-weight: 600
   font-size: 38px
   line-height: 43px
   text-align: center
   margin-bottom: 80px
 
-.delivery__content
+.delivery__list
   display: flex
   justify-content: center
   align-items: stretch
