--- a/src/components/footer/styles/footer.module.sass
+++ b/src/components/footer/styles/footer.module.sass
@@ -1,21 +1,25 @@
 .footer
-  padding: 50px 20px 80px 
+  padding: 50px 100px 
   background-color: #000
+
+.footer__container
   display: flex
-  justify-content: center
-  column-gap: 200px
+  justify-content: space-between
+  column-gap: 150px
   align-items: center
+  max-width: 1440px
 
 .footer__info
   width: 700px
   font-weight: 500
-  font-size: 16px
+  font-size: 14px
   line-height: 20px
   color: #fff
 
-.footer__inst, .footer__logo
-  width: 80px
-  height: 80px
+.footer__inst
+  width: 70px
+  height: 70px
 
-
-
+.footer__logo
+  width: 60px
+  height: 60px
