--- a/src/components/header/styles/header.module.sass
+++ b/src/components/header/styles/header.module.sass
@@ -1,6 +1,6 @@
 .header
   position: relative
-  z-index: 1
+  z-index: 5
   background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.1) 100%)
   position: fixed
   height: 100px
@@ -24,3 +24,4 @@
 .header__inst, .header__cart
   width: 50px
   height: 50px
+  cursor: pointer
