--- a/src/components/common/card/styles/prodslider.module.sass
+++ b/src/components/common/card/styles/prodslider.module.sass
@@ -1,9 +1,8 @@
-.swiper 
+.swiper
   width: 100%
   height: 100%
 
-
-.swiper-slide 
+.swiper-slide
   text-align: center
   font-size: 18px
   background: #fff
@@ -21,3 +20,4 @@
   display: flex
   justify-content: center
   align-items: center
+  margin: 0 auto
