--- a/src/components/common/discounts/styles/discounts.module.sass
+++ b/src/components/common/discounts/styles/discounts.module.sass
@@ -44,6 +44,8 @@
   transform: translateX(-50%)
   top: 17%
   z-index: 2
+  width: 100%
+  overflow: hidden
 
 .discounts__airpods3__wrap
   position: relative
