--- a/src/components/common/banner/styles/banner.module.sass
+++ b/src/components/common/banner/styles/banner.module.sass
@@ -8,6 +8,20 @@
   justify-content: center
   align-items: flex-start
   column-gap: 100px
+  @media (max-width: 1700px ) 
+    padding: 200px 40px 140px 30px
+    column-gap: 80px
+  @media (max-width: 1440px ) 
+    padding: 160px 30px 100px 20px
+    column-gap: 50px
+  @media (max-width: 1170px ) 
+    column-gap: 50px
+  @media (max-width: 950px ) 
+    column-gap: 20px
+  @media (max-width: 900px )
+    padding: 150px 20px 100px 20px 
+    flex-direction: column
+    align-items: center
 
 .banner__text_content
   display: flex
@@ -16,32 +30,140 @@
   width: 860px
   margin-top: 70px
   margin-bottom: 85px
+  @media (max-width: 1700px ) 
+    width: 680px
+  @media (max-width: 1440px ) 
+    width: 560px
+  @media (max-width: 1170px ) 
+    width: 450px
+  @media (max-width: 900px ) 
+    margin-top: 40px
+    width: 100%
+    align-items: center
+    margin-bottom: 50px
+
 
 .banner__title1
   font-weight: 700
   font-size: 96px
   line-height: 120px
   margin: 0 auto 0 0 
+  @media (max-width: 1700px ) 
+    font-size: 78px
+    line-height: 95px
+  @media (max-width: 1440px ) 
+    font-size: 68px
+    line-height: 82px
+  @media (max-width: 1170px ) 
+    font-size: 56px
+    line-height: 68px
+  @media (max-width: 900px ) 
+    font-size: 68px
+    line-height: 82px
+    text-align: center
+    margin: 0 auto
+  @media (max-width: 600px ) 
+    font-size: 56px
+    line-height: 60px
+  @media (max-width: 460px ) 
+    font-size: 46px
+    line-height: 56px
+  @media (max-width: 380px ) 
+    font-size: 38px
+    line-height: 42px
 
 .banner__title2
   font-weight: 700
   font-size: 96px
   line-height: 120px
   margin: 0 0 20px auto
+  @media (max-width: 1700px ) 
+    font-size: 78px
+    line-height: 95px
+  @media (max-width: 1440px ) 
+    font-size: 68px
+    line-height: 82px
+  @media (max-width: 1170px ) 
+    font-size: 56px
+    line-height: 68px
+  @media (max-width: 900px ) 
+    font-size: 68px
+    line-height: 82px
+    text-align: center
+    margin: 0 auto 30px auto
+  @media (max-width: 600px ) 
+    font-size: 56px
+    line-height: 60px
+  @media (max-width: 460px ) 
+    font-size: 46px
+    line-height: 56px
+  @media (max-width: 380px ) 
+    font-size: 38px
+    line-height: 42px
 
 .banner__subtitle
   font-weight: 400
   font-size: 28px
   line-height: 34px
   margin: 0 0 0 auto
+  @media (max-width: 1700px ) 
+    font-size: 22px
+    line-height: 27px
+  @media (max-width: 1440px ) 
+    font-size: 18px
+    line-height: 22px
+  @media (max-width: 900px ) 
+    text-align: center
+    margin: 0 auto
+    font-size: 22px
+    line-height: 27px
+  @media (max-width: 600px ) 
+    font-size: 16px
+    line-height: 18px
 
 .banner__airpods_wrap
-  position: relative
+  position: absolute
   width: 277.77px
   height: 250px
-  margin-left: 30px
+  left: 20px
+  top: 400px
+  @media (max-width: 1700px ) 
+    width: 222.22px
+    height: 200px
+    top: 330px
+  @media (max-width: 1440px ) 
+    width: 180px
+    height: 162px
+    top: 270px
+  @media (max-width: 1170px ) 
+    width: 140px
+    height: 126px
+    top: 250px
+  @media (max-width: 900px ) 
+    display: none
+
 
 .banner__watches_wrap
   position: relative
   width: 628.75px
   height: 620px
+  @media (max-width: 1700px ) 
+    width: 557.76px
+    height: 550px
+  @media (max-width: 1440px ) 
+    width: 466.49px
+    height: 460px
+  @media (max-width: 1170px ) 
+    width: 385.36px
+    height: 380px
+  @media (max-width: 460px ) 
+    width: 304.23px
+    height: 300px
+
+.banner__left_content
+  position: relative
+
+.relative
+  position: relative
+  width: 100%
+  height: 100%
