--- a/src/components/common/benefits/styles/benefits.module.sass
+++ b/src/components/common/benefits/styles/benefits.module.sass
@@ -10,6 +10,10 @@
     align-items: center
     flex-wrap: wrap
     margin: 0 auto 
+    @media (max-width: 1440px ) 
+      padding: 100px 50px
+    @media (max-width: 1000px ) 
+      padding: 80px 30px
     .benefits__list
       display: flex
       flex-direction: row
@@ -19,6 +23,17 @@
       flex-wrap: wrap
       row-gap: 100px
       column-gap: 70px
+      padding: 10px
+      @media (max-width: 1700px ) 
+        row-gap: 50px
+        column-gap: 30px
+        padding: 0
+      @media (max-width: 1440px )
+        row-gap: 80px
+        column-gap: 60px
+      @media (max-width: 1000px )
+        row-gap: 70px
+        column-gap: 40px 
       li
         display: flex
         column-gap: 30px
@@ -26,19 +41,32 @@
         width: 100%
         flex-direction: row
         align-items: flex-start
+        @media (max-width: 1000px )
+          flex-direction: column
+          align-items: center
+          text-align: center
         div
           display: flex
           flex-direction: column
+          max-width: 296px
+          @media (max-width: 1000px )
+            max-width: 380px
           h2
             font-family: $georgia
             font-size: 28px
             font-weight: 700
             margin-bottom: 20px
+            margin-top: 30px
+            @media (max-width: 1000px )
+              font-size: 26px
+            @media (max-width: 800px )
+              font-size: 22px
           p
             font-weight: 400
             font-size: 22px
             line-height: 26px
-            max-width: 296px
+            @media (max-width: 1000px )
+              font-size: 18px
 
 .benefits__img_wrap
   width: 600px
@@ -49,4 +77,16 @@
   width: 530px
   height: 800px
   overflow: hidden
-  
+  @media (max-width: 1700px ) 
+    width: 430px
+    height: 650px
+  @media (max-width: 1440px ) 
+    display: none
+
+.benefits__svg
+  position: relative
+  width: 60px
+  height: 60px
+  @media (max-width: 1000px )
+    width: 50px
+    height: 50px
