--- a/src/components/common/nav/styles/nav.module.sass
+++ b/src/components/common/nav/styles/nav.module.sass
@@ -1,3 +1,17 @@
+@import ../../../../../public/assets/styles/variables/fonts
+
+.nav
+  position: relative
+  z-index: 6
+  display: block
+  @media (max-width: 1170px)
+    display: none
+
+.nav__title
+  font-family: $georgia
+  font-size: 26px
+  font-weight: 600
+
 .nav__menu
   display: flex
   list-style: none
@@ -8,6 +22,9 @@
   font-size: 18px
   line-height: 22px
   color: #fff
+  @media (max-width: 1440px )
+    column-gap: 70px
 
 .nav__menu__link, .nav__menu__item
   padding: 20px 0
+
