--- a/src/components/common/delivery/styles/delivery.module.sass
+++ b/src/components/common/delivery/styles/delivery.module.sass
@@ -5,20 +5,38 @@
 
 .delivery__container
   color: #fff
-  padding: 100px 20px 140px 20px
+  padding: 110px 20px 140px 20px
+  @media (max-width: 1440px )
+    padding: 90px 20px 120px 20px
 
 .delivery__title
+  font-family: $georgia
   font-weight: 600
   font-size: 38px
   line-height: 43px
   text-align: center
-  margin-bottom: 80px
+  margin-bottom: 70px
+  @media (max-width: 1440px ) 
+    font-size: 32px
+    line-height: 38px
+    margin-bottom: 55px
+  @media (max-width: 900px ) 
+    font-size: 30px
+    line-height: 34px
+
 
 .delivery__list
   display: flex
   justify-content: center
   align-items: stretch
   column-gap: 90px
+  flex-wrap: wrap
+  row-gap: 50px
+  @media (max-width: 1700px ) 
+    column-gap: 50px
+  @media (max-width: 900px )
+    flex-direction: column
+    align-items: center
 
 .delivery__item
   padding: 50px 40px
@@ -26,6 +44,11 @@
   text-align: center
   max-width: 400px
   width: 100%
+  @media (max-width: 1440px )
+    max-width: 350px
+  @media (max-width: 900px )
+    padding: 30px 20px
+    max-width: 300px
 
 .delivery__item__title
   font-weight: 700
@@ -33,8 +56,18 @@
   line-height: 32px
   font-family: $georgia
   margin-bottom: 25px
+  @media (max-width: 1440px ) 
+    font-size: 24px
+    line-height: 26px
+
 
 .delivery__item__text
   font-weight: 400
-  font-size: 22px
-  line-height: 27px
+  font-size: 20px
+  line-height: 26px
+  @media (max-width: 1440px ) 
+    font-size: 20px
+    line-height: 28px
+  @media (max-width: 1440px ) 
+    font-size: 18px
+    line-height: 22px
