added adaptive for basket and card

--- a/src/components/common/banner/styles/banner.module.sass
+++ b/src/components/common/banner/styles/banner.module.sass
@@ -22,6 +22,8 @@
     padding: 150px 20px 100px 20px 
     flex-direction: column
     align-items: center
+  @media (max-width: 600px )
+    padding: 110px 20px 80px 20px 
 
 .banner__text_content
   display: flex
