--- a/src/components/common/card/styles/card.module.sass
+++ b/src/components/common/card/styles/card.module.sass
@@ -4,32 +4,87 @@
   background: linear-gradient(243.56deg, #520092 2.31%, #000000 56.63%)
 
 .card__container
-  padding: 150px 140px 140px 100px
+  padding: 150px 120px 90px 120px
+  @media (max-width: 1550px )
+    padding: 140px 40px 30px 40px
+  @media (max-width: 1170px )
+    padding: 140px 70px 30px 70px
+  @media (max-width: 900px )
+    padding: 140px 30px 20px 30px
+  @media (max-width: 600px )
+    padding: 120px 20px 10px 20px
+    text-align: center
+  @media (max-width: 450px )
+    padding: 100px 20px 10px 20px
+  
 
-.card__content_container
+.card__content_container 
   display: flex
   justify-content: center
   column-gap: 80px
   color: #fff
+  @media (max-width: 1570px )
+    column-gap: 50px
+  @media (max-width: 1170px )
+    flex-direction: column
+    align-items: center
+    row-gap: 70px
+  @media (max-width: 1170px )
+    row-gap: 50px
 
 .card__title
   font-weight: 700
-  font-size: 48px
-  line-height: 55px
+  font-size: 38px
+  line-height: 50px
   font-family: $georgia
-  margin-bottom: 50px
-  margin-left: 70px
+  margin-bottom: 60px
+  margin-left: 100px
   color: #fff
+  @media (max-width: 1375px )
+    margin-left: 70px
+    font-size: 32px
+    line-height: 36px
+  @media (max-width: 1170px )
+    text-align: center
+    margin-bottom: 50px
+    margin-left: 0
+  @media (max-width: 600px )
+    font-size: 30px
+    line-height: 32px
+    margin-bottom: 40px
+
+.card__slide
+  max-width: 600px
+  @media (max-width: 1375px )
+    max-width: 450px
+  @media (max-width: 600px )
+    max-width: 420px
+  @media (max-width: 600px )
+    max-width: 320px
 
 .card__info_item
   margin-bottom: 50px
+  @media (max-width: 600px)
+    text-align: left
+
 
 .card__subtitle
   font-style: normal
   font-weight: 600
-  font-size: 28px
-  line-height: 34px
+  font-size: 26px
+  line-height: 32px
   margin-bottom: 25px
+  @media (max-width: 1375px )
+    font-size: 22px
+    line-height: 26px
+  @media (max-width: 450px )
+    margin-bottom: 20px
+
+
+.colorTitle
+  margin-bottom: 25px
+  @media (max-width: 1170px )
+    margin-bottom: 0
 
 .card__color_list
   display: flex
@@ -49,74 +104,165 @@
 
 .card__chars
   display: flex
-  grid-template-columns: 400px 300px
   column-gap: 50px
 
 .hidden__chars
-  height: 170px
+  height: 180px
   overflow: hidden
+  @media (max-width: 1375px )
+    height: 173px
+  @media (max-width: 450px )
+    height: 160px
+  @media (max-width: 390px )
+    height: 175px
+  @media (max-width: 363px )
+    height: 188px
 
 .hidden__desc
-  height: 107px
+  height: 100px
   overflow: hidden
+  @media (max-width: 1375px )
+    height: 90px
+  @media (max-width: 450px )
+    height: 100px
 
-.card__chars__keys
-  width: 60%
 
-.card__chars__values
-  width: 40%
+.card__chars__list
+  display: flex
+  flex-direction: column
+  div
+    display: flex
+    gap: 50px
+    justify-content: space-between
+    align-items: center
+
+.card__chars__item
+  font-weight: 500
+  font-size: 20px
+  line-height: 24px
+  margin-bottom: 15px
+  @media (max-width: 1375px )
+    font-size: 18px
+    line-height: 22px
 
 .card__chars__key
-  font-weight: 500
-  font-size: 22px
-  line-height: 27px
-  margin-bottom: 15px
-
+  width: 60%
+  word-break: keep-all
+  @media (max-width: 450px )
+    font-size: 16px
+    line-height: 20px
 
 .card__chars__value
+  word-break: keep-all
   font-weight: 400
-  font-size: 22px
-  line-height: 27px
-  margin-bottom: 15px
-
+  font-size: 20px
+  line-height: 24px
+  width: 40%
+  @media (max-width: 1375px )
+    font-size: 18px
+    line-height: 22px
+  @media (max-width: 450px )
+    font-size: 16px
+    line-height: 20px
 
 
 .card__more
   font-weight: 500
-  font-size: 22px
-  line-height: 28px
+  font-size: 20px
+  line-height: 24px
   text-decoration-line: underline
   cursor: pointer
   color: #fff
   background-color: transparent
+  border: none
+  @media (max-width: 1375px )
+    font-size: 18px
+    line-height: 22px
+  @media (max-width: 450px )
+    font-size: 16px
+    line-height: 20px
 
 .card__description
   font-weight: 400
-  font-size: 22px
-  line-height: 27px
+  font-size: 20px
+  line-height: 24px
   margin-bottom: 15px
   margin-top: 10px
+  @media (max-width: 1375px )
+    font-size: 18px
+    line-height: 22px
+  @media (max-width: 450px )
+    font-size: 16px
+    line-height: 20px
+
 
 .card__price
   font-weight: 700
-  font-size: 40px
-  line-height: 49px
-  margin-bottom: 50px
+  font-size: 36px
+  line-height: 42px
+  margin-bottom: 35px
+  @media (max-width: 1375px )
+    font-size: 32px
+    line-height: 36px
+  @media (max-width: 600px)
+    font-size: 30px
+    line-height: 32px
+
 
 .card__orderBtn
   padding: 19px
   max-width: 320px
   width: 100%
-  margin: 0 auto
+  // margin: 0 auto
   border: 1px solid #FFFFFF
   border-radius: 20px
   font-weight: 500
-  font-size: 28px
-  line-height: 34px
+  font-size: 26px
+  line-height: 28px
   background-color: transparent
   color: #fff
   cursor: pointer
+  margin-bottom: 50px
   &:hover
     background-color: #fff
     color: #200039
     transition: all 0.3s linear
+  @media (max-width: 1375px )
+    font-size: 24px
+    line-height: 26px
+    max-width: 300px
+  @media (max-width: 450px )
+    font-size: 22px
+    line-height: 24px
+    max-width: 300px
+    padding: 15px
+
+.card__orderBtn_2
+  display: none
+
+.colorBox
+  @media (max-width: 1170px)
+    display: flex
+    column-gap: 20px
+    justify-content: left
+    align-items: center
+  @media (max-width: 600px )
+    justify-content: center
+    margin-bottom: 35px
+
+.orderBtn
+  display: none
+  @media (max-width: 1170px)
+    display: block
+  @media (max-width: 600px )
+    margin: 0 auto 50px auto
+
+  
+.priceFirst
+  display: none
+  @media (max-width: 1170px)
+    display: block
+  @media (max-width: 600px )
+    margin: 0 auto 35px auto
+
+
