--- a/src/components/common/card/styles/prodslider.module.sass
+++ b/src/components/common/card/styles/prodslider.module.sass
@@ -14,10 +14,16 @@
 .img_wrap
   position: relative
   width: 400px
-  height: 500px
+  height: 480px
   background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.05) 100%)
   border: 1px solid #FFFFFF
   display: flex
   justify-content: center
   align-items: center
   margin: 0 auto
+  @media (max-width: 1375px )
+    width: 330px
+    height: 396px
+  @media (max-width: 600px )
+    width: 300px
+    height: 335px
