--- a/src/components/common/catalog/styles/catalog.module.sass
+++ b/src/components/common/catalog/styles/catalog.module.sass
@@ -7,10 +7,22 @@
   text-align: center
   @media (max-width: 1700px ) 
     padding: 120px 50px 140px 
+  @media (max-width: 900px )
+    padding: 100px 50px 120px 
+  @media (max-width: 600px )
+    padding: 90px 30px 100px 
+  @media (max-width: 450px )
+    padding: 70px 15px 80px 
 
 .catalog__selections
   margin: 0 auto 95px auto
   max-width: 1440px
+  @media (max-width: 900px )
+    margin-bottom: 75px
+  @media (max-width: 600px )
+    margin-bottom: 60px
+  @media (max-width: 450px )
+    margin-bottom: 50px
 
 .catalog__selection_btn
   width: calc( 100% / 3  )
@@ -24,6 +36,10 @@
   &:first-child
     border-top-left-radius: 20px
     border-bottom-left-radius: 20px
+    @media (max-width: 600px )
+      width: 100%
+      border-radius: 20px
+      margin-bottom: 20px
   &:last-child
     border-top-right-radius: 20px
     border-bottom-right-radius: 20px
@@ -34,6 +50,13 @@
   @media (max-width: 1700px ) 
     font-size: 18px
     line-height: 22px
+  @media (max-width: 600px )
+    width: 50%
+  &:nth-child(2)
+    @media (max-width: 600px )
+      border-top-left-radius: 20px
+      border-bottom-left-radius: 20px
+
 
 .catalog__list
   max-width: 1200px
@@ -44,3 +67,7 @@
   justify-content: center
   flex-wrap: wrap
   margin: 0 auto
+  @media (max-width: 900px )
+    row-gap: 70px
+  @media (max-width: 600px )
+    row-gap: 60px
