--- a/src/components/common/delivery/styles/delivery.module.sass
+++ b/src/components/common/delivery/styles/delivery.module.sass
@@ -8,6 +8,8 @@
   padding: 110px 20px 140px 20px
   @media (max-width: 1440px )
     padding: 90px 20px 120px 20px
+  @media (max-width: 500px )
+    padding: 90px 20px 90px 20px
 
 .delivery__title
   font-family: $georgia
@@ -23,6 +25,7 @@
   @media (max-width: 900px ) 
     font-size: 30px
     line-height: 34px
+    margin-bottom: 50px
 
 
 .delivery__list
@@ -34,9 +37,6 @@
   row-gap: 50px
   @media (max-width: 1700px ) 
     column-gap: 50px
-  @media (max-width: 900px )
-    flex-direction: column
-    align-items: center
 
 .delivery__item
   padding: 50px 40px
