--- a/src/components/common/mobileNav/styles/mobileNav.module.sass
+++ b/src/components/common/mobileNav/styles/mobileNav.module.sass
@@ -1,6 +1,7 @@
 @import ../../../../../public/assets/styles/variables/fonts
 
 .nav
+  position: relative
   display: none
   opacity: 0
   transition: all ease .3s
@@ -12,7 +13,7 @@
     padding: 150px 40px 50px 70px
     background: rgba(0, 0, 0, 0.95)
     height: 100vh
-    z-index: 7
+    z-index: -1
   @media (max-width: 600px)
     width: 100%
   @media (max-width: 480px)
@@ -20,8 +21,10 @@
 
 .active
   animation: visible .3s ease-in-out forwards
+  z-index: 7
 .inactive
   animation: hidden .3s ease-in-out forwards
+  z-index: -1
 
 .nav__title
   font-family: $georgia
