--- a/src/pages/admin/delivery/change-delivery/styles/changeDelivery.module.sass
+++ b/src/pages/admin/delivery/change-delivery/styles/changeDelivery.module.sass
@@ -1,6 +1,6 @@
 .changeDelivery
   &__container
-    padding: 100px 240px 100px 480px
+    padding: 100px 0
     h1
       font-weight: 600
       font-size: 42px
