--- a/src/admin/menu/styles/menu.module.sass
+++ b/src/admin/menu/styles/menu.module.sass
@@ -1,21 +1,30 @@
+@import '~/public/assets/styles/mixins'
+  
 .menu
   width: 400px
   height: 100vh
+  position: fixed
   background-color: #200039
   &__container
     padding: 50px
     text-align: center
   &__sign
-    margin: 0 auto 
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    margin: 0 auto 50px
   &__user_wrap
-    width: 70px
-    height: 70px
+    width: 55px
+    height: 55px
     position: relative
   &__sign_in__btn
+    @include H3Admin
     background-color: transparent
+    border: none
     padding: 10px
-    font-weight: 700
-    font-size: 22px
+    font-weight: 500
+    font-size: 18px
     line-height: 27px
     color: #fff
     cursor: pointer
@@ -24,7 +33,8 @@
   color: #fff
   &__list
     display: flex
-    column-gap: 30px
+    flex-direction: column
+    gap: 30px
     align-items: center
     list-style: none
   &__item
