--- a/src/pages/admin/benefits/change-benefits/styles/changeBenefits.module.sass
+++ b/src/pages/admin/benefits/change-benefits/styles/changeBenefits.module.sass
@@ -1,6 +1,6 @@
-.changeDiscounts
+.changeBenefits
   &__container
-    padding: 100px 240px 100px 480px
+    padding: 100px 0
     h1
       font-weight: 600
       font-size: 42px
@@ -30,6 +30,8 @@
     padding: 15px
     &:focus, &:active, &:hover
       outline: none
+      height: 55px
+      transition: all 0.2s linear
     &::placeholder
       opacity: 70%
   &__textareaInput
@@ -44,8 +46,19 @@
     padding: 15px
     &:focus, &:active, &:hover
       outline: none
+      height: 155px
+      transition: all 0.2s linear
     &::placeholder
       opacity: 70%
+  &__changeBtn
+    position: relative
+    width: 30px
+    height: 30px
+    align-self: flex-start
+    background-color: transparent
+    cursor: pointer
+    border: none
+    margin-left: 10px
 .save__btn
   max-width: 200px
   padding: 15px 30px
