--- a/src/pages/admin/delivery/styles/delivery.module.sass
+++ b/src/pages/admin/delivery/styles/delivery.module.sass
@@ -1,6 +1,6 @@
 .delivery
   &__container
-    padding: 100px 240px 100px 480px
+    padding: 100px 0
   &__title
     font-weight: 600
     font-size: 42px
