--- a/src/pages/admin/header/styles/header.module.sass
+++ b/src/pages/admin/header/styles/header.module.sass
@@ -2,7 +2,7 @@
   
 .header
   &__container
-    padding: 100px 240px 100px 480px
+    padding: 100px 0
   &__title
     font-weight: 600
     font-size: 42px
