fixed delivery and fonts

--- a/public/assets/styles/globals.sass
+++ b/public/assets/styles/globals.sass
@@ -23,3 +23,48 @@ a
   color: #fff !important
   @media (max-width: 450px)
     display: none !important
+
+.slick-slider
+  width: 70% !important
+  margin: 0 auto !important
+  @media (max-width: 1710px )
+    width: 80% !important
+  @media (max-width: 1500px )
+    width: 90% !important
+  @media (max-width: 1400px )
+    width: 100% !important
+.slick-track
+  display: flex !important
+  justify-content: center !important
+  align-items: stretch !important
+  text-align: center
+  height: 440px
+  @media (max-width: 1170px )
+    height: 465px !important
+  @media (max-width: 1020px )
+    height: 510px !important
+  @media (max-width: 950px )
+    height: 470px !important
+  @media (max-width: 900px )
+    height: 420px !important
+  @media (max-width: 750px )
+    height: 370px !important
+  @media (max-width: 600px )
+    height: 354px !important
+.slick-slide
+  display: flex !important
+  justify-content: center !important
+  align-items: center !important
+.slick-dots
+  bottom: -35px !important
+.slick-dots li
+  border-radius: 50px !important
+  border: 1px solid #fff !important
+  margin: 0 15px !important
+  width: 15px !important
+  height: 15px !important
+.slick-dots .slick-active
+  background-color: #fff !important
+  button
+    &::before
+      color: #fff !important
