--- a/src/pages/admin/catalog/catalog-item/styles/addCatalogItem.module.sass
+++ b/src/pages/admin/catalog/catalog-item/styles/addCatalogItem.module.sass
@@ -20,6 +20,57 @@
         line-height: 27px
         margin-bottom: 25px
         color: #fff
+  &__color
+    margin-bottom: 30px
+  &__addImg
+    display: flex
+    align-items: flex-start
+    &__btn
+      max-width: 320px
+      padding: 15px 30px
+      width: 100%
+      font-style: normal
+      font-weight: 500
+      font-size: 22px
+      line-height: 22px
+      color: #fff
+      background-color: transparent
+      border-radius: 10px
+      border: 1px solid #fff
+      margin-bottom: 30px 
+      &:hover
+        background-color: #fff
+        color: #200039
+        transition: all 0.3s linear
+  &__input_file
+    width: 320px
+    height: 320px
+    opacity: 0
+    z-index: 5
+    position: absolute
+    top: 0
+    left: 0
+    cursor: pointer
+    &__common
+      width: 320px
+      height: 320px
+      position: relative
+    &__plus
+      position: absolute
+      top: 0
+      left: 0
+      z-index: 4
+      width: 320px
+      height: 320px
+      background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.05) 100%)
+      border: 1px solid #FFFFFF
+      display: flex
+      justify-content: center
+      align-items: center
+      div
+        position: relative
+        width: 50px
+        height: 50px
   &__changeBtn
     position: relative
     width: 30px
@@ -79,7 +130,7 @@
     border: none
     cursor: pointer
   &__charAdd
-    max-width: 200px
+    max-width: 350px
     padding: 15px 30px
     width: 100%
     font-style: normal
@@ -95,7 +146,6 @@
       background-color: #fff
       color: #200039
       transition: all 0.3s linear
-
   &__textareaInput
     width: 800px
     height: 150px
@@ -113,7 +163,39 @@
     display: flex
     column-gap: 15px
     flex-direction: column
-
+.addColor
+  max-width: 320px
+  padding: 15px 30px
+  width: 100%
+  font-style: normal
+  font-weight: 500
+  font-size: 22px
+  line-height: 22px
+  color: #fff
+  background-color: transparent
+  border-radius: 10px
+  border: 1px solid #fff
+  margin-bottom: 80px
+  &:hover
+    background-color: #fff
+    color: #200039
+    transition: all 0.3s linear
+.deleteColor
+  max-width: 320px
+  padding: 15px 30px
+  width: 100%
+  font-style: normal
+  font-weight: 500
+  font-size: 22px
+  line-height: 22px
+  color: #fff
+  background-color: transparent
+  border-radius: 10px
+  border: 1px solid #fff
+  &:hover
+    background-color: #fff
+    color: #200039
+    transition: all 0.3s linear
 .label__radio
   font-weight: 500
   font-size: 18px
@@ -163,3 +245,23 @@
     background-color: #fff
     color: #200039
     transition: all 0.3s linear
+
+.flex
+  display: flex
+  justify-content: center
+  align-items: center
+  flex-direction: column
+  gap: 30px
+.flex2
+  display: flex
+  justify-content: start
+  align-items: center
+  gap: 15px
+  flex-wrap: wrap
+  max-width: 800px
+.flex3
+  display: flex
+  justify-content: center
+  align-items: center
+  flex-direction: column
+  gap: 15px
