--- a/src/components/common/catalog/styles/catalogItem.module.sass
+++ b/src/components/common/catalog/styles/catalogItem.module.sass
@@ -1,7 +1,7 @@
 @import ../../../../../public/assets/styles/variables/fonts
 
 .catalog__item
-  max-width: 320px
+  max-width: 350px
   width: 100%
   display: flex
   flex-direction: column
@@ -13,23 +13,28 @@
 
 .catalog__item__wrap
   position: relative
-  width: 320px
-  height: 320px
+  width: 350px
+  height: 350px
   margin-bottom: 20px
   background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.05) 100%)
   border: 1px solid #FFFFFF
+  padding: 20px 
   @media (max-width: 450px )
     width: 300px
     height: 300px
   @media (max-width: 380px )
     width: 280px
     height: 280px
+.catalog__item__underwrap
+  position: relative
+  width: 100%
+  height: 100%
 
 .catalog__item__title
   font-family: $georgia
   font-weight: 700
-  font-size: 24px
-  line-height: 32px
+  font-size: 22px
+  line-height: 26px
   margin: 0 auto 25px auto
   text-align: center
   @media (max-width: 600px )
@@ -42,7 +47,7 @@
   margin: auto auto 25px auto
   font-weight: 700
   font-size: 22px
-  line-height: 32px
+  line-height: 26px
   @media (max-width: 600px )
     font-size: 20px
     line-height: 24px
