--- a/src/components/common/nav/styles/nav.module.sass
+++ b/src/components/common/nav/styles/nav.module.sass
@@ -27,4 +27,16 @@
 
 .nav__menu__link, .nav__menu__item
   padding: 20px 0
+  position: relative
+  &:hover::after
+      content: ''
+      position: absolute
+      bottom: 10px
+      left: 0
+      width: 100%
+      height: 1px
+      background-color: #fff
+      transition: all 2s linear 
+
+
 
