--- a/src/components/footer/styles/footer.module.sass
+++ b/src/components/footer/styles/footer.module.sass
@@ -1,5 +1,5 @@
 .footer
-  padding: 50px 100px 
+  padding: 40px 80px 
   background-color: #000
   @media (max-width: 1770px )
     padding: 40px 40px 
@@ -23,7 +23,8 @@
     row-gap: 50px
 
 .footer__info
-  width: 700px
+  max-width: 800px
+  width: 100%
   font-weight: 500
   font-size: 14px
   line-height: 20px
@@ -38,15 +39,15 @@
     text-align: center
     width: 80%
 
-.footer__inst
-  margin-top: 10px
-  position: relative
-  width: 70px
-  height: 70px
-  cursor: pointer
+// .footer__inst
+//   margin-top: 10px
+//   position: relative
+//   width: 70px
+//   height: 70px
+//   cursor: pointer
 
-.footer__logo
-  position: relative
-  width: 60px
-  height: 60px
-  cursor: pointer
+// .footer__logo
+//   position: relative
+//   width: 60px
+//   height: 60px
+//   cursor: pointer
