--- a/src/components/header/styles/header.module.sass
+++ b/src/components/header/styles/header.module.sass
@@ -52,6 +52,8 @@
   width: 50px
   height: 50px
   cursor: pointer
+  background-color: transparent
+  border: none
   @media (max-width: 600px )
     width: 35px
     height: 35px
