--- a/src/pages/admin/header/styles/header.module.sass
+++ b/src/pages/admin/header/styles/header.module.sass
@@ -37,6 +37,34 @@
       margin-bottom: 30px
       display: flex
       align-items: center
+  &__input_file
+    width: 100px
+    height: 100px
+    opacity: 0
+    z-index: 5
+    position: absolute
+    top: 0
+    left: 0
+    cursor: pointer
+    &__common
+      width: 100px
+      height: 100px
+      position: relative
+    &__plus
+      width: 100px
+      height: 100px
+      position: absolute
+      top: 0
+      left: 0
+      z-index: 4
+      padding: 25px
+      border: 1px solid #fff
+      border-radius: 10px
+      div
+        position: relative
+        width: 100%
+        height: 100%
+
   &__input_text
     width: 650px
     height: 50px
