fixed 404 and card product

--- a/src/components/common/mobileNav/styles/mobileNav.module.sass
+++ b/src/components/common/mobileNav/styles/mobileNav.module.sass
@@ -1,7 +1,9 @@
 @import ../../../../../public/assets/styles/variables/fonts
 
 .nav
-  position: relative
+  position: absolute
+  top: 0
+  left: 0
   display: none
   opacity: 0
   transition: all ease .3s
