--- a/src/components/common/basket/styles/basketItem.module.sass
+++ b/src/components/common/basket/styles/basketItem.module.sass
@@ -41,7 +41,6 @@
 
 
 .basket__product__img
-  position: relative
   width: 120px
   height: 120px
   margin-right: 30px
@@ -51,9 +50,15 @@
     width: 90px
     height: 90px
     margin-right: 10px
-  // @media (max-width: 375px )
-  //   width: 60px
-  //   height: 60px
+  @media (max-width: 390px )
+    width: 70px
+    height: 90px
+    padding: 15px 0
+.basket__product__img__wrap
+  position: relative
+  width: 100%
+  height: 100%
+
 
 .basket__product__info
   max-width: 250px
@@ -112,6 +117,9 @@
   @media (max-width: 600px )
     font-size: 22px
     line-height: 26px
+  @media (max-width: 450px )
+    font-size: 20px
+    line-height: 24px
 
 
 .basket__product__price
