--- a/src/components/common/card/styles/prodslider.module.sass
+++ b/src/components/common/card/styles/prodslider.module.sass
@@ -22,8 +22,14 @@
   align-items: center
   margin: 0 auto
   @media (max-width: 1375px )
-    width: 330px
-    height: 396px
+    width: 390px
+    height: 409px
+  @media (max-width: 1250px )
+    width: 350px
+    height: 366px
+  @media (max-width: 1170px )
+    width: 350px
+    height: 366px
   @media (max-width: 600px )
-    width: 300px
+    width: 320px
     height: 335px
