--- a/src/components/common/card/styles/prodslider.module.sass
+++ b/src/components/common/card/styles/prodslider.module.sass
@@ -33,3 +33,11 @@
   @media (max-width: 600px )
     width: 320px
     height: 335px
+.wihtoutNav
+  margin-left: 91px
+  @media (max-width: 1375px )
+    margin-left: 70px
+  @media (max-width: 1250px )
+    margin-left: 73px
+  @media (max-width: 1170px )
+    margin-left: auto
